test/success/nostd/mono/fn/main.sk
module Main {

fn id[T](t: T) -> T {
    t
}

struct Q {}

struct S {}

fn main() {
    let a = id(Q());
    let b = id(S());
}

}