test/errors/borrowcheck/function_borrow/main.sk
module Main {

fn sink[T](t: T) {}

fn identity[T](t: T) -> T {
    return t;
}

fn main() {
    let x = 5;
    let y = identity(&x);
    sink(x);
    sink(y);

}

}
